--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ navigation-compose = "2.7.7"
 accompanist-permissions = "0.30.0"
 room-runtime = "2.6.1"
 room-compiler = "2.6.1"
+room-ktx = "2.6.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -32,6 +33,7 @@ androidx-navigation = { group = "androidx.navigation", name = "navigation-compos
 accompanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanist-permissions" }
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room-runtime" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room-compiler" }
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room-ktx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
