--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ accompanist-permissions = "0.30.0"
 room-runtime = "2.6.1"
 room-compiler = "2.6.1"
 room-ktx = "2.6.1"
+coil-compose = "2.6.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -34,6 +35,7 @@ accompanist-permissions = { group = "com.google.accompanist", name = "accompanis
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room-runtime" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room-compiler" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room-ktx" }
+coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil-compose" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
